--- a/src/AppBundle/Resources/translations/messages.fr.yml
+++ b/src/AppBundle/Resources/translations/messages.fr.yml
@@ -1,7 +1,7 @@
 views:
     app:
         about:
-            title: "Qui sommes nous ?"
+            title: "Qui sommes-nous ?"
         mention:
             title: "Mentions légales"
         termsandconditions:
