--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -114,7 +114,7 @@ views:
                 Two distinct activities coexist:<br/>
                 - Roberval balance Manufacturing (following the resumption of TESTUT Tool)<br/>
                 - Outsourcing beams & manufacture of electronic cards<br/><br/>
-                <strong>September 2004 </ strong><br />
+                <strong>September 2004 </strong><br />
                 First significant achievement with the completion of the "Circle of Buren 'for Lille 2004, the architect's name.<br />
             paragraph1-2: >
                 <strong>December 2007</strong><br />
@@ -145,7 +145,7 @@ views:
                 Industrialization : Mr Régis Marquette – rmarquette.feel@orange.fr<br />
                 Engineering office : Mr Augustin Ségard – asegard.feel@orange.fr<br />
                 Quality department : contact.feel@orange.fr<br />
-                And qualified technicians.
+                And qualified technicians.</ br>
             subheading4: "Our partners"
         galery:
             title: "Gallery"
@@ -170,7 +170,7 @@ views:
                 register: "Registration"
     itemhome:
         index:
-            title: "Feel, the French specialist of LED"
+            title: "Feel, the French LED specialist"
             feel: "Feel is:"
             hometitle1: "Lille company established in 2002"
             homepara1: "Specialized in the design and manufacture of lighting LED, Feel is distinguished by its capacity for innovation and responsiveness."
